src/index.css
@import url("https://fonts.googleapis.com/css?family=Fredoka+One|Montserrat");

body {
  margin: 0;
  padding: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

button {
  font-family: 'Montserrat', sans-serif !important;
}

.notification-divider {
  height: 2px;
  background-color: #E5E5E5;
  margin-top: 1vh;
  margin-bottom: 1vh;
}

.popup-content  {
  border-radius: 5px !important;
  padding: 4vh !important;
  height: 60vh !important;
  overflow: scroll !important;
}

.rbc-toolbar-label {
  margin-left: 11vh;
}

.sign-in-form {
  margin-bottom: 2%;
  font-family: 'Montserrat', sans-serif;
}

.sign-in-entry {
  border-radius: 5px;
  height: 32px;
  border-width: 1px;
  width: 20%;
  font-size: 13px;
  font-family: 'Montserrat', sans-serif;
}

.sign-up-form {
  margin-bottom: 2%;
  font-family: 'Montserrat', sans-serif;
}

.sign-up-entry {
  border-radius: 5px;
  height: 32px;
  border-width: 1px;
  width: 20%;
  font-size: 13px;
  font-family: 'Montserrat', sans-serif;
}

.custom-button {
  border-radius: 10px;
  border-width: 3px;
  color: white;
  background-color: #3173AF;
  height: 32px;
  width: 10%;
  text-transform: uppercase;
  letter-spacing: 2.5px;
  font-weight: 500;
  border: none;
  transition: all 0.3s ease 0s;
  cursor: pointer;
  outline: none;
  font-size: 0.8em;
}

.custom-button:disabled {
  background-color: #cccccc;
  color: #666666;
}

.menu {
  float: left;
}

.new-shift-label {
  font-weight: 700;
}

.popup-title {
  text-align: center;
  font-family: 'Fredoka One', cursive;
  font-size: 3vh;
}

.rbc-calendar {
  min-width: 1212px;
  font-family: 'Montserrat', sans-serif;
}

.rbc-btn-group {
  font-family: 'Montserrat', sans-serif;
  font-size: 0.9em !important;
}

.shift-info {
  display: inline-block;
  margin-bottom: 1vh;
  font-family: 'Montserrat', sans-serif;
}

.shift-info-label {
  float: left;
  width: 22vh;
  margin-left: 12vh;
  font-weight: 700;
  font-family: 'Montserrat', sans-serif;
}

.shift-info-entry {
  float: left;
  font-family: 'Montserrat', sans-serif;
  border-radius: 5px;
  height: 32px;
  border-width: 1px;
}

aside#welcome-text {
  float: left;
  font-family: 'Montserrat', sans-serif;
}

aside#welcome-buttons {
  float: right;
  font-family: 'Montserrat', sans-serif;
}

button#approve-swap-button {
  float: right;
  width: 20vh;
  margin-left: 1vh;
}

button#approve-emergency-button {
  float: right;
  width: 20vh;
  margin-left: 1vh;
}

button#decline-swap-button {
  float: right;
  width: 20vh;
  margin-left: 1vh;
}

button#confirm-emergency-request {
  width: 20vh;
}

button#confirm-swap-request-form {
  width: 20vh;
  margin-top: 5vh;
}

button#new-shift-submit {
  width: 20vh;
  margin-top: 5vh;
}

button#add-shift-button {
  margin-right: 1vh;
  float: right;
  width: 15vh;
}

button#notifications-button {
  margin-right: 1vh;
  float: right;
  width: 20vh;
}

button#sign-out-button {
  margin-right: 1vh;
  float: right;
  width: 15vh;
}

button#sign-up-button {
  text-align: center;
}

button#sign-in-submit {
  margin-top: 2%;
}

button#toggle-popup-content {
  width: 30vh;
  font-size: 0.5em;
  margin-right: 1vh;
}

button#toggle-emergency-popup-content {
  width: 30vh;
  font-size: 0.5em;
  margin-left: 1vh;
}

div#approve-emergency-box {
  background-color: #EAFFE9;
  border-radius: 2px;
}

div#approve-notification-box {
  background-color: #E1F1FF;
  border-radius: 2px;
}

div#decline-notification-box {
  border-radius: 2px;
  background-color: #FFE9E9
}

div#emergency-box {
  padding: 5px;
  display: block;
  font-family: 'Montserrat', sans-serif;
}

div#new-shift-form {
  text-align: center;
  font-family: 'Montserrat', sans-serif;
}

div#notification-box {
  padding: 5px;
  display: block;
  font-family: 'Montserrat', sans-serif;
}

div#notifications-list {
  padding: 5px;
  display: block;
  font-family: 'Montserrat', sans-serif;
}

div#sign-up-page {
  text-align: center;
  font-family: 'Montserrat', sans-serif;
}

div#sign-in-page {
  text-align: center;
  font-family: 'Montserrat', sans-serif;
}

form#emergency-request-form {
  margin-top: 5vh;
  display: block;
  font-family: 'Montserrat', sans-serif;
}

form#request-swap-form {
  margin-top: 5vh;
  display: block;
  text-align: center;
  font-family: 'Montserrat', sans-serif;
}

h1#index-title-text {
  color: #3173AF;
  font-family: 'Fredoka One', cursive;
  font-size: 8vh;
  position: relative;
  margin-top: 10vh;
}

h1#title {
  color: #3173AF;
  font-family: 'Fredoka One', cursive;
  font-size: 8vh;
  text-align: center;
  position: relative !important;
  top: 10vh;
  z-index: -1;
}

h2#welcome-name {
  font-family: 'Montserrat', sans-serif;
  font-size: 2em;
  padding-left: 1vh;
  color: #3173AF;
  float: left;
}

h3#welcome-organisation {
  font-family: 'Montserrat', sans-serif;
  font-size: 1.5em;
  padding-left: 1vh;
  color: #3173AF;
  float: left;
}

input#comment {
  width: 35vh;
}

section#confirm-emergency {
  margin-top: 3vh;
  text-align: center;
}

section#index-title {
  text-align: center;
}

section#toggle-popup-state {
  text-align: center;
}

section#welcome {
  display: block;
  margin-bottom: 3%;
  font-size: 0.8em;
}

span#user-name-on-hompage {
  /* font-size: 1em; */
  text-transform: capitalize;
  font-family: 'Montserrat', sans-serif;
}

